--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Easily show CLI usage from a markdown source file",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests.js -R spec"
   },
   "keywords": [
     "CLI-Usage",
@@ -19,5 +19,8 @@
     "marked": "^0.3.2",
     "minimist": "^0.2.0",
     "marked-terminal": "^0.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^1.21.3"
   }
 }
