--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "marked": "^0.3.2",
-    "minimist": "^0.2.0",
-    "marked-terminal": "^0.1.0"
+    "marked-terminal": "^1.6.1",
+    "minimist": "^0.2.0"
   },
   "devDependencies": {
     "mocha": "^1.21.3"
