--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "author": "Mikael Brevik",
   "license": "MIT",
   "dependencies": {
-    "marked": "^0.3.2",
-    "marked-terminal": "^1.6.1",
-    "minimist": "^0.2.0"
+    "marked": "^0.3.6",
+    "marked-terminal": "^1.6.2",
+    "mocha": "^3.0.2"
   },
   "devDependencies": {
-    "mocha": "^1.21.3"
+    "mocha": "*"
   }
 }
